fixes contrast of background and menu links/ bye felicia

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ li {
 
 .menu-list li {
   margin: 0;
-  text-shadow: 0 0 4px black;
+  text-shadow: 0 0 9px black;
 }
 
 .menu-open {
@@ -133,15 +133,16 @@ li {
 
 .menu-link {
   font-size: 1.25rem;
-  font-weight: normal;
+  font-weight: bolder;
+  letter-spacing: 1px;
 }
 
 .menu-link:visited {
-  color: var(--light-secondary);
+  color: var(--dark-secondary);
 }
 
 .menu-link:hover {
-  color: var(--light-secondary);
+  color: var(--dark-secondary);
   text-shadow: 0 0 4px var(--light-secondary);
 }
 
@@ -165,6 +166,7 @@ li {
   margin: 0 auto;
   box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
+  margin-bottom: 3rem;
 }
 
 #call-btn:hover,
@@ -182,6 +184,7 @@ li {
   position: absolute;
   top: 0;
   left: 0;
+  text-shadow: 0 0 9px black;
 }
 
 header {
